Prevent opening My/List controller
I've added this to redirect back to list view, after modal popup. Probably the better solution is to set up "return_url" using JS on modal popup with the current "window.location" value.

--- a/www/App_Data/template/my/lists/create/modal.html
+++ b/www/App_Data/template/my/lists/create/modal.html
@@ -2,7 +2,7 @@
   <div class="modal-dialog modal-lg">
     <form method="post" action="<~/my/lists/url>">
      <input type="hidden" name="XSS" value="<~session[XSS]>">
-     <input type="hidden" name="return_url" value="<~return_url>">
+     <input type="hidden" name="return_url" value="<~../url><~/common/list/relid>">
      <input type="hidden" name="item[entity]" value="<~userlist_entity>">
      <input type="hidden" name="item[item_id]" value="<~item_id>">
 
